[package]
name = "blenvy"
version = "0.1.0-alpha.2"
authors = ["Mark 'kaosat-dev' Moissette"]
description = "Allows you to define Bevy components direclty inside gltf files and instanciate the components on the Bevy side."
homepage = "https://github.com/kaosat-dev/Blenvy"
repository = "https://github.com/kaosat-dev/Blenvy"
keywords = ["gamedev", "bevy", "assets", "gltf", "components"]
categories = ["game-development"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
bevy = "0.16"
serde = "1.0.219"
ron = "0.10.1"
serde_json = "1.0.140"
bevy_ecs = "0.16.0"
bevy_common_assets = {version = "0.13", features = ["ron"]}

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = ["dynamic_linking"] }
